--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -22,13 +22,14 @@
 						<%= link_to "Yönerge", home_yonerge_path %>
 					</li>
 					<li>
-						<a href="#">Topluluklar</a>
+						<%= link_to "Topluluklar", clubs_path %>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 
 					<li class="dropdown">
-						 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Giriş Yap<strong class="caret"></strong></a>
+					 <% if user_signed_in? %>
+						 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Kullanıcı Adı<strong class="caret"></strong></a>
 						<ul class="dropdown-menu">
 							<li>
 								<a href="#">Something else here</a>
@@ -36,9 +37,18 @@
 							<li class="divider">
 							</li>
 							<li>
-								<a href="#">Separated link</a>
+								<%= link_to "Çıkış", destroy_user_session_path %>
 							</li>
 						</ul>
+					  <% else %>
+					  		<li>
+					  		<%= link_to "Giriş", new_user_session_path %>
+						  	</li>
+							<li>
+								<%= link_to "Kayıt ol", new_user_registration_path %>
+							</li>
+						
+						<% end %>
 					</li>
 				</ul>
 			</div>
