--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,15 @@
-<h2>Forgot your password?</h2>
+<%= render "home/header" %>
+<div class="row">
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-5">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Şifremi unuttum ?</h3>
+        </div>
+        <div class="panel-body">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, :class => "form_control" }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -9,8 +18,12 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Parola sıfırlama yönergeleri bana gönder.", class: "btn btn-primary" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+        </div>
+        </div>
+      </div>
+    </div>
