--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Giriş yap", new_session_path(resource_name) %><br />
+  <%= link_to "Giriş yap", new_session_path(resource_name), class: "btn btn-info" %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Kayıt ol", new_registration_path(resource_name) %><br />
+  <%= link_to "Kayıt ol", new_registration_path(resource_name), class: "btn btn-info" %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Şifremi unuttum?", new_password_path(resource_name) %><br />
+  <%= link_to "Şifremi unuttum?", new_password_path(resource_name), class: "btn btn-info" %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
