--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -37,7 +37,7 @@
 							<li class="divider">
 							</li>
 							<li>
-								<%= link_to "Çıkış", destroy_user_session_path %>
+								<%= link_to "Çıkış", destroy_user_session_path, method: :delete %>
 							</li>
 						</ul>
 					  <% else %>
