--- a/app/views/clubs/_clubheader.html.erb
+++ b/app/views/clubs/_clubheader.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-7">
 		<div class="page-header">
 			<h1>
-				Öğrenci Toplulukları <br /><small>Ondokuz Mayıs Üniversitesi</small>
+				<%= @club.name %> <br /><small>Ondokuz Mayıs Üniversitesi</small>
 			</h1>
 		</div>
 	</div>
