--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -16,8 +16,8 @@
         <div class="panel-body">
           <div class="list-group">
           <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+            <p class="list-group-item-text"></p>
+            <h4 class="list-group-item-heading" align="center"><%= User.find_by_id(@club.supervisor).first_name+" "+User.find_by_id(@club.supervisor).last_name %></h4>
           </a>
         </div>
         </div>
@@ -48,25 +48,15 @@
         </div>
         </div>
       </div>
-      <div class="panel panel-success">
+    </div>
+    <div class="col-md-9">
+      <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="panel-title">Denetim Kurulu</h3>
+          <h3 class="panel-title">Hakkımızda</h3>
         </div>
         <div class="panel-body">
-          <div class="list-group">
-          <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          </a>
-        </div>
+          <p><%= @club.description %></p>
+          <p>E-mail : <%= @club.email %></p>
         </div>
       </div>
     </div>
@@ -74,20 +64,6 @@
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">Etkinlikler</h3>
-        </div>
-        <div class="panel-body">
-          <div class="list-group">
-          <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">List group item heading</h4>
-            <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          </a>
-
-        </div>
-        </div>
-      </div>
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Haberler</h3>
         </div>
         <div class="panel-body">
           <div class="list-group">
