--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -72,9 +72,9 @@
         </div>
         <div class="panel-body">
           <div class="list-group">
-          <% Activity.where(club_id: @club.id).each do |activitiy| %>
+          <% Activity.where(club_id: @club.id).each do |activity| %>
             
-            <%= link_to activity.title, notice, class: "list-group-item" %><br />
+            <%= link_to activity.title, activity, class: "list-group-item" %><br />
           <% end %>
           
 
@@ -100,35 +100,6 @@
     </div>
   </div>
   </div>
-  <p>
-  <strong>Name:</strong>
-  <%= @club.name %>
-</p>
-
-<p>
-  <strong>Logo:</strong>
-  <%= @club.logo %>
-</p>
-
-<p>
-  <strong>Supervisor:</strong>
-  <%= @club.supervisor %>
-</p>
-
-<p>
-  <strong>Regulation:</strong>
-  <%= @club.regulation %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @club.description %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @club.email %>
-</p>
 
 <%= link_to 'Edit', edit_club_path(@club) %> |
 <%= link_to 'Back', clubs_path %>
