club#show ve admin/club#show düzeltme

--- a/app/views/admin/clubs/show.html.erb
+++ b/app/views/admin/clubs/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "clubheader" %>
+<%= render "clubs/clubheader" %>
 <p id="notice"><%= notice %></p>
 
 
@@ -101,5 +101,5 @@
   </div>
   </div>
 
-<%= link_to 'Edit', edit_club_path(@club) %> |
-<%= link_to 'Back', clubs_path %>
+<%= link_to 'Edit', edit_admin_club_path(@club) %> |
+<%= link_to 'Back', admin_clubs_path %>
