Pundit eklendi ve panelde kişilere geçiş eklendi

--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -9,7 +9,7 @@
         <%=link_to "Kulüpler",admin_clubs_path %>
     </li>
     <li>
-        <%=link_to "Kişiler",admin_clubs_path %>
+        <%=link_to "Kişiler",admin_users_path %>
     </li>
     <li>
        <%=link_to "Haberler",admin_clubs_path %>
