ana sayfaya yönetici paneline erişim sağlandi bazi formlar düzenlendi

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,14 @@
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "form_control"}) do |f| %>
           <%= devise_error_messages! %>
 
+           <div class="field">
+            <%= f.label :first_name %><br />
+            <%= f.text_field :first_name%>
+          </div>
+            <div class="field">
+            <%= f.label :last_name %><br />
+            <%= f.text_field :last_name %>
+          </div>
           <div class="field">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true %>
@@ -29,6 +37,8 @@
             <%= f.label :password_confirmation %><br />
             <%= f.password_field :password_confirmation, autocomplete: "off" %>
           </div>
+
+
 
           <div class="actions">
             <%= f.submit "Kayıt ol", class: "btn btn-primary" %>
