--- a/app/views/admin/_admin_navbar.html.erb
+++ b/app/views/admin/_admin_navbar.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <nav class="navbar navbar-inverse ">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -44,3 +45,4 @@
     </div>
   </div>
 </nav>
+</div>
