--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -1,21 +1,23 @@
-<div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-    <li class="sidebar-brand">
-        <a href="#">
-           Admin Panel
-        </a>
-    </li>
-    <li>
-        <%=link_to "Kulüpler",admin_clubs_path %>
-    </li>
-    <li>
-        <%=link_to "Kişiler",admin_users_path %>
-    </li>
-    <li>
-       <%=link_to "Haberler",admin_clubs_path %>
-    </li>
-    <li>
-        <%=link_to "Duyurular",admin_clubs_path %>
-    </li>
-    </ul>
+<div class="panel panel-default">
+    <div class="panel-body">
+         <ul class="sidebar">
+            <li >
+                <a href="#">
+                   Admin Panel
+                </a>
+            </li>
+            <li>
+                <%=link_to "Kulüpler",admin_clubs_path %>
+            </li>
+            <li>
+                <%=link_to "Kişiler",admin_users_path %>
+            </li>
+            <li>
+               <%=link_to "Haberler",admin_clubs_path %>
+            </li>
+            <li>
+                <%=link_to "Duyurular",admin_clubs_path %>
+            </li>
+            </ul>
+    </div>
 </div>
