--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 		<div class="col-md-12">
 			<blockquote class="pull-right">
 				<p>
-					Bu proje Omü Uzem Yazılım Kampında yapılmıştır.  
+					Bu proje OMÜ Uzem Yazılım Kampında yapılmıştır.  
 				</p> <small> &copy; 2015 Ondokuz Mayıs Üniversitesi</small>
 			</blockquote>
 		</div>
