--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,18 +1,16 @@
+
 <div class="row">
-	<div class="col-md-7">
-		<div class="page-header">
+	<div class="col-md-6">
+		<div>
 			<h1>
 				Öğrenci Toplulukları <br /><small>Ondokuz Mayıs Üniversitesi</small>
 			</h1>
 		</div>
 	</div>
-	<div class="col-md-5">
-		<nav class="navbar navbar-default" role="navigation">
+
+	<div class="col-md-6">
+		<nav class="navbar navbar-default" role="navigation"  style="margin-top:10%">
 			<div class="navbar-header">
-				 
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
 				<%= link_to "Anasayfa", root_path, class:"navbar-brand" %>
 			</div>
 			
