Club Header düzenlendi, birkaç küçük değişiklik yapıldı.

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -36,7 +36,11 @@
 							<% end %>
 
 							<li>
-								<%= link_to "Hesabımı düzenle", edit_user_registration_path %>
+								<%= link_to "Kulüplerim", clubs_path %>
+							</li>
+
+							<li>
+								<%= link_to "Hesabımı Düzenle", edit_user_registration_path %>
 							</li>
 							<li class="divider">
 							</li>
