--- a/app/views/clubs/_clubheader.html.erb
+++ b/app/views/clubs/_clubheader.html.erb
@@ -1,18 +1,16 @@
+
 <div class="row">
-	<div class="col-md-7">
-		<div class="page-header">
+	<div class="col-md-6">
+		<div>
 			<h1>
 				<%= @club.name %> <br /><small>Ondokuz Mayıs Üniversitesi</small>
 			</h1>
 		</div>
 	</div>
-	<div class="col-md-5">
-		<nav class="navbar navbar-default" role="navigation">
+
+	<div class="col-md-6">
+		<nav class="navbar navbar-default" role="navigation"  style="margin-top:10%">
 			<div class="navbar-header">
-				 
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
 				<%= link_to "Anasayfa", root_path, class:"navbar-brand" %>
 			</div>
 			
@@ -31,8 +29,18 @@
 					 <% if user_signed_in? %>
 						 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.first_name %><strong class="caret"></strong></a>
 						<ul class="dropdown-menu">
+							<% if current_user.admin? %>
+								<li>
+								<%= link_to "Yönetici Paneli", admin_clubs_path %>
+							</li>
+							<% end %>
+
 							<li>
-								<%= link_to "Hesabımı düzenle", edit_user_registration_path %>
+								<%= link_to "Kulüplerim", clubs_path %>
+							</li>
+
+							<li>
+								<%= link_to "Hesabımı Düzenle", edit_user_registration_path %>
 							</li>
 							<li class="divider">
 							</li>
@@ -54,14 +62,10 @@
 			</div>
 			
 		</nav>
-		<!--<div class="alert alert-success alert-dismissable">
-			 
-			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-				×
-			</button>
-			<h4>
-				Alert!
-			</h4> <strong>Warning!</strong> Best check yo self, you're not looking too good. <a href="#" class="alert-link">alert link</a>
-		</div>-->
 	</div>
 </div>
+
+
+
+
+
