--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-md-3">
-		<div class="panel panel-success">
+		<div class="panel panel-danger">
 		  <div class="panel-heading">
 		    <h3 class="panel-title">Topluluklar<% if user_signed_in? %>ım<% end %></h3>
 		  </div>
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div class="col-md-6">
-		<div class="panel panel-primary">
+		<div class="panel panel-warning">
 		  <div class="panel-heading">
 		    <h3 class="panel-title">Etkinlikler</h3>
 		  </div>
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div class="col-md-3">
-		<div class="panel panel-primary">
+		<div class="panel panel-success">
 		  <div class="panel-heading">
 		    <h3 class="panel-title">Duyurular</h3>
 		  </div>
