--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,25 +7,34 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
-<div class="panel panel-default">
-  <div class="panel-body">
 
-<%= yield %>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <%= render "header" %>
+      <% if notice.present? %>
+          <div class="alert alert-success" style="font-size:20px;text-align:center;border-radius: 0 !important;">
+            <%= notice %>
+          </div>
+        <% elsif alert.present? %>
+          <div class="alert alert-danger" style="font-size:20px;text-align:center;border-radius: 0 !important;">
+            <%= alert %>
+          </div>
+      <%end%>
+      <%= yield %>
+    </div>
+    <div class="panel-footer">
+      <div class="row">
+         <div class="col-md-12">
+            <blockquote class="pull-right">
+            <p>
+              Bu proje OMÜ Uzem Yazılım Kampında yapılmıştır.
+            </p> <small> &copy; 2015 Ondokuz Mayıs Üniversitesi</small>
+          </blockquote>
+        </div>
+      </div>
+    </div>
   </div>
-	<div class="panel-footer">
-		<div class="row">
-		<div class="col-md-12">
-			<blockquote class="pull-right">
-				<p>
-					Bu proje OMÜ Uzem Yazılım Kampında yapılmıştır.  
-				</p> <small> &copy; 2015 Ondokuz Mayıs Üniversitesi</small>
-			</blockquote>
-		</div>
-	</div>
 </div>
-</div>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
 </body>
 </html>
