--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="panel panel-default">
     <div class="panel-body">
-      <%= render "header" %>
+      <%= render "home/header" %>
       <% if notice.present? %>
           <div class="alert alert-success" style="font-size:20px;text-align:center;border-radius: 0 !important;">
             <%= notice %>
