Notice işlerine başla

--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -7,16 +7,16 @@
                 </a>
             </li>
             <li>
-                <%=link_to "Kulüpler",admin_clubs_path %>
+                <%=link_to "Kulüpler", admin_clubs_path %>
             </li>
             <li>
-                <%=link_to "Kişiler",admin_users_path %>
+                <%=link_to "Kişiler", admin_users_path %>
             </li>
             <li>
-               <%=link_to "Haberler",admin_clubs_path %>
+               <%=link_to "Haberler", admin_notices_path %>
             </li>
             <li>
-                <%=link_to "Duyurular",admin_clubs_path %>
+                <%=link_to "Duyurular", admin_clubs_path %>
             </li>
             </ul>
     </div>
