--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:admin,@user]) do |f| %>
+<%= form_for([:admin,@user], html: { multipart: true }) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this club from being saved:</h2>
@@ -10,10 +10,14 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
+  </div>
+  <div class="field">
+  <%= f.label :avatar %><br>
+  <%= f.file_field :avatar %>
+  
   </div>
     <div class="field">
     <%= f.label :last_name %><br>
