kluplere resim eklendi

--- a/app/views/admin/clubs/_form.html.erb
+++ b/app/views/admin/clubs/_form.html.erb
@@ -20,6 +20,11 @@
     <%= f.text_field :logo %>
   </div>
   <div class="field">
+  <%= f.label :avatar %><br>
+  <%= f.file_field :avatar %>
+  
+  </div>
+  <div class="field">
     <%= f.label :supervisor %><br>
     <%= f.number_field :supervisor %>
   </div>
