--- a/app/views/admin/clubs/index.html.erb
+++ b/app/views/admin/clubs/index.html.erb
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-md-1">
-        <%= image_tag("omu.jpg", height: '30')%>
+        <%= image_tag club.avatar.url ,height: '25', width: '25' %>
     </div>
     <div class="col-md-8" >
         <%=club.name%>
