notice view düzenlendi.

--- a/app/views/admin/notices/_form.html.erb
+++ b/app/views/admin/notices/_form.html.erb
@@ -18,7 +18,7 @@
     <%= f.input :content %>
      </div>
   <div class="field">
-    <%= f.input :club_id, collection: Club.all, label: 'Ülke Seçiniz' %>
+    <%= f.input :club_id, collection: Club.all, label: 'Topluluk Seçiniz.' %>
   <div class="actions">
     <%= f.submit %>
   </div>
