--- a/app/views/admin/notices/index.html.erb
+++ b/app/views/admin/notices/index.html.erb
@@ -2,7 +2,8 @@
   <div class="panel panel-default">
     <div class="panel-heading"><h2><%= notice.title %></h2></div>
     <div class="panel-body">
-      <%= notice.content %>
+      <%= notice.content %><br />
+      <%= link_to "Düzenle", edit_admin_notice_path(notice.id), class:"btn btn-default" %>
     </div>
   </div>
 <% end %>
