--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -1,11 +1,11 @@
-
+<%= render "home/header" %>
 <p id="notice"><%= notice %></p>
 
     <% @clubs.each do |club| %>
     <div class="panel panel-default col-md-3">
     
       <div class="panel-body">
-        <%= image_tag(club.logo, height: '120')%>
+        <%= image_tag club.avatar.url ,height: '125', width: '125' %>
       </div>
       <div class="panel-footer"><%= link_to club.name, club %></div>
     </div>
