--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,7 +1,6 @@
-
+<%= render "clubheader" %>
 <p id="notice"><%= notice %></p>
 
-<h1><%= @club.name %></h1> <br />
 <div class="row">
     <div class="col-md-3">
       <div class="panel panel-success">
