--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -19,11 +19,15 @@ background-position: top-left;
 }
 .sidebar li {
     text-decoration: none;
-    padding-top: 10px;
+    padding-top: 15px;
 
 }
 .sidebar li :hover{
     text-decoration: none;
 
+
+}
+.image{
+	border-radius: 20px;
 
 }
