--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-3">
       <div class="panel panel-success">
         <div class="panel-body">
-          <center><%= image_tag @club.avatar.url ,height: '125', width: '125' %></center>
+          <center><%= image_tag @club.avatar.url ,height: '125', width: '125', class:"image" %></center>
         </div>
       </div>
       <div class="panel panel-defult">
