--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -5,7 +5,7 @@
     <div class="panel panel-default col-md-3">
     
       <div class="panel-body">
-        <%= image_tag club.avatar.url ,height: '125', width: '125' %>
+        <center><%= image_tag club.avatar.url ,height: '125', width: '125', class:"image" %></center>
       </div>
       <div class="panel-footer"><%= link_to club.name, club %></div>
     </div>
