--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,8 @@
 		  <div class="panel-body">
 		    <div class="list-group">
 			  <% @Club.each do |club| %>
-			  <div class="list-group-item">	
-				   <%= image_tag club.avatar.url ,height: '25', width: '25'%>
+			  <div class="list-group-item" id="club">	
+				   <%= image_tag club.avatar.url ,height: '25', width: '25', class:"icon"%>
 				   &nbsp;
 				  <%= link_to club.name , club%>
 			  	
