--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
             <p>
               Bu proje OMÜ Uzem Yazılım Kampında yapılmıştır.
             </p> <small> &copy; 2015 Ondokuz Mayıs Üniversitesi</small>
+            <a href="http://www.omu.edu.tr/en" class="btn btn-success">Omü Ansayfa</a>
           </blockquote>
         </div>
       </div>
