info modeli eklendi. düzeltmeler yapıldı.

--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -13,10 +13,10 @@
                 <%=link_to "Kişiler", admin_users_path %>
             </li>
             <li>
-               <%=link_to "Haberler", admin_notices_path %>
+               <%=link_to "Haberler", admin_infos_path %>
             </li>
             <li>
-                <%=link_to "Duyurular", admin_clubs_path %>
+                <%=link_to "Duyurular", admin_notices_path %>
             </li>
             </ul>
     </div>
