--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,70 +1,67 @@
 <%= render "header" %>
-	<div class="col-md-3">
-		<div class="panel panel-danger">
-		  <div class="panel-heading">
-		    <h3 class="panel-title">Topluluklar<% if user_signed_in? %>ım<% end %></h3>
+<div class="col-md-3">
+	<div class="panel panel-danger">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">Topluluklar<% if user_signed_in? %>ım<% end %></h3>
+	  </div>
+	  <div class="panel-body">
+	    <div class="list-group">
+		  <% @Club.each do |club| %>
+		  <div class="list-group-item">	
+			   <%= image_tag club.avatar.url ,height: '25', width: '25'%>
+			   &nbsp;
+			  <%= link_to club.name , club%>
+		  	
 		  </div>
-		  <div class="panel-body">
-		    <div class="list-group">
-			  <% @Club.each do |club| %>
-			  <div class="list-group-item" id="club">	
-				   <%= image_tag club.avatar.url ,height: '25', width: '25', class:"icon"%>
-				   &nbsp;
-				  <%= link_to club.name , club%>
-			  	
-			  </div>
-			 
-			  
-			  <% end %>
-			</div>
-		  </div>
+		 
+		  
+		  <% end %>
 		</div>
+	  </div>
 	</div>
-	<div class="col-md-6">
-		<div class="panel panel-warning">
-		  <div class="panel-heading">
-		    <h3 class="panel-title">Etkinlikler</h3>
-		  </div>
-		  <div class="panel-body">
-		    <div class="list-group">
-			  <% @Activities.each do |activity| %>
-            
-	            <%= link_to activity.title, activity, class: "list-group-item" %>
-	          <% end %>
+</div>
+<div class="col-md-6">
+	<div class="panel panel-warning">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">Etkinlikler</h3>
+	  </div>
+	  <div class="panel-body">
+	    <div class="list-group">
+		  <% @Activities.each do |activity| %>
+    
+            <%= link_to activity.title, activity, class: "list-group-item" %>
+          <% end %>
 
-			</div>
-		  </div>
 		</div>
-		<div class="panel panel-primary">
-		  <div class="panel-heading">
-		    <h3 class="panel-title">Haberler</h3>
-		  </div>
-		  <div class="panel-body">
-		    <div class="list-group">
-			  <% @News.each do |news| %>
-            
-	            <%= link_to news.title, news, class: "list-group-item" %>
-	          <% end %>
-			</div>
-		  </div>
-		</div>
+	  </div>
 	</div>
-	<div class="col-md-3">
-		<div class="panel panel-success">
-		  <div class="panel-heading">
-		    <h3 class="panel-title">Duyurular</h3>
-		  </div>
-		  <div class="panel-body">
-		    <div class="list-group">
-			  <% @Notice.each do |notice| %>
-            
-	            <%= link_to notice.title, notice, class: "list-group-item" %>
-	          <% end %>
-			</div>
-		  </div>
+	<div class="panel panel-primary">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">Haberler</h3>
+	  </div>
+	  <div class="panel-body">
+	    <div class="list-group">
+		  <% @infos.each do |info| %>
+    
+            <%= link_to info.title, info, class: "list-group-item" %>
+          <% end %>
 		</div>
-		
+	  </div>
 	</div>
-
-
-
+</div>
+<div class="col-md-3">
+	<div class="panel panel-success">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">Duyurular</h3>
+	  </div>
+	  <div class="panel-body">
+	    <div class="list-group">
+		  <% @Notice.each do |notice| %>
+    
+            <%= link_to notice.title, notice, class: "list-group-item" %>
+          <% end %>
+		</div>
+	  </div>
+	</div>
+	
+</div>
