--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-3">
 	<div class="panel panel-danger">
 	  <div class="panel-heading">
-	    <h3 class="panel-title">Topluluklar<% if user_signed_in? %>ım<% end %></h3>
+	    <h3 class="panel-title">Topluluklar</h3>
 	  </div>
 	  <div class="panel-body">
 	    <div class="list-group">
