BUG club#show uyem? kısmında çözüldü. fontlar eklendi.

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -11,9 +11,11 @@
       <div class="panel panel-defult">
         <div class="panel-body">
 
-        <!-- Root Path Geçici -->
 
-          <%= button_to "Kulübe Üye Ol", club_roles_path(club_id: @club.id),  method: :post, class: "btn btn-primary" if user_signed_in? and not @uyemi %>
+          <%= button_to "Topluluğa Üye Ol", club_roles_path(club_id: @club.id),  method: :post, class: "btn btn-primary" if user_signed_in? and not @uyemi %>
+          <% if @uyemi and user_signed_in? %>
+            <a href="#" class="btn btn-success disabled"><span class="glyphicon glyphicon-ok"> </span>Topluluğa üyesiniz.</a>
+          <% end %>
         </div>
       </div>
       <div class="panel panel-danger">
