--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script type="text/javascript">
+    $(document).ready(function(){
+      setTimeout(function(){
+        $('.alert-danger').remove();
+      }, 5000);
+      setTimeout(function(){
+        $('.alert-success').remove();
+      }, 5000);
+    })
+  </script>
 </head>
 <body>
 
