kuluplerim sayfası tamamlandı

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -36,7 +36,7 @@
 							<% end %>
 
 							<li>
-								<%= link_to "Kulüplerim", clubs_path %>
+								<%= link_to "Kulüplerim", home_kuluplerim_path %>
 							</li>
 
 							<li>
