--- a/app/views/admin/infos/index.html.erb
+++ b/app/views/admin/infos/index.html.erb
@@ -7,6 +7,7 @@
   <div class="row">
     <div class="col-md-8" >
         <h2><%= info.title %></h2><br />
+        <%= image_tag info.avatar.url ,height: '25', width: '25' %>
         <p><%= info.content %></p>
     </div>
    
