--- a/app/views/admin/notices/_form.html.erb
+++ b/app/views/admin/notices/_form.html.erb
@@ -17,6 +17,13 @@
     <div class="field">
     <%= f.input :content %>
      </div>
+     
+  <div class="field">
+  <%= f.label :avatar %><br>
+  <%= f.file_field :avatar %>
+  
+  </div>
+
   <div class="field">
     <%= f.input :club_id, collection: Club.all, label: 'Topluluk Seçiniz.' %>
   <div class="actions">
