--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -18,6 +18,9 @@
             <li>
                 <%=link_to "Duyurular", admin_notices_path %>
             </li>
+            <li>
+                <%=link_to "Etkinlikler", admin_activities_path %>
+            </li>
             </ul>
     </div>
 </div>
