--- a/app/views/admin/notices/_form.html.erb
+++ b/app/views/admin/notices/_form.html.erb
@@ -26,6 +26,7 @@
 
   <div class="field">
     <%= f.input :club_id, collection: Club.all, label: 'Topluluk Seçiniz.' %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
