--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -1,9 +1,9 @@
 
 <%= render "home/header" %>
 <p id="notice"><%= notice %></p>
-<h2><%= @info.title %></h2> 
+<h2><%= @info.title %></h2> </br>
 
 <p>
-  <%= image_tag @info.avatar.url  %>
+  <%= image_tag @info.avatar.url  %></br></br>
   <%= @info.content %>
 </p>
